Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -17,6 +17,7 @@ stages:
             repository: 'backend'
             command: 'build'
             Dockerfile: './backend/Dockerfile'
+            tags: $(Build.SourceVersion)
             buildContext: './backend'
   - stage: test
     jobs:
