Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -47,6 +47,7 @@ stages:
             script: |
               # Write your commands here
               docker scout quickview backend:$(Build.SourceVersion)
+              docker scout cves backend:$(Build.SourceVersion)
   - stage: publish
     jobs:
       - job : pushImage
