--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -5,16 +5,10 @@ stages:
     jobs:
       - job : build
         steps:
-        # - task: Bash@3
-        #   inputs:
-        #     targetType: 'inline'
-        #     script: |
-        #       # Write your commands here
-        #       docker build -t backend:latest backend -f ./backend/Dockerfile
         - task: Docker@2
           inputs:
             containerRegistry: 'dh-erhansiraci'
-            repository: 'backend'
+            repository: 'erhansiraci/backend'
             command: 'build'
             Dockerfile: './backend/Dockerfile'
             tags: $(Build.SourceVersion)
@@ -48,6 +42,7 @@ stages:
               # Write your commands here
               docker scout quickview backend:$(Build.SourceVersion)
               docker scout cves backend:$(Build.SourceVersion)
+
   - stage: publish
     jobs:
       - job : pushImage
@@ -57,7 +52,7 @@ stages:
             targetType: 'inline'
             script: |
               # Write your commands here
-              echo RUN IMAGE PUSH              
+              docker push erhansiraci/backend:$(Build.SourceVersion)
   - stage: deploy
     jobs:
       - job : deployInt
