redis connection string moved to env variables

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "RedisSettings": {
-    "ConnectionString": "redis-server:6379,password=123456ex",
+    "ConnectionString": "localhost:6379,password=123456ex",
     "InstanceName": "test"
   }
 }
